syntax = "proto3";

package baselineintegrity.v1;

option go_package = "github.com/BlindedGlory/baseline-integrity/gen/go/baselineintegrity/v1;baselineintegrityv1";

import "google/protobuf/timestamp.proto";
import "baselineintegrity/v1/common.proto";

service TelemetryService {
  // Called by GAME SERVER only (authoritative).
  rpc SubmitMatchAggregates(SubmitMatchAggregatesRequest) returns (SubmitMatchAggregatesResponse);
}

message SubmitMatchAggregatesRequest {
  string match_id = 1;
  string game_build_id = 2;
  google.protobuf.Timestamp match_started_at = 3;
  google.protobuf.Timestamp match_ended_at = 4;

  repeated PlayerAggregates players = 10;

  // Server authentication/signing is enforced by deployment (mTLS/API key) or a SignedEnvelope.
  SignedEnvelope server_signature = 100;
}

message SubmitMatchAggregatesResponse {
  bool accepted = 1;
  string reason = 2;
}

message PlayerAggregates {
  SessionRef ref = 1;
  TrustTier observed_tier = 2;
  PlatformOS platform_os = 3;

  // Telemetry schema guardrail.
  string telemetry_schema_id = 4;

  // Aggregates only (privacy-first).
  repeated Counter counters = 10;
  repeated Histogram histograms = 11;
  repeated Quantiles quantiles = 12;
}

message Counter {
  string name = 1;  // e.g. "invalid_movement_envelope"
  uint64 value = 2;
}

message Histogram {
  string name = 1;       // e.g. "reaction_time_ms"
  double min = 2;
  double max = 3;
  uint32 bucket_count = 4;
  repeated uint64 buckets = 5; // length == bucket_count
}

message Quantiles {
  string name = 1; // e.g. "target_switch_latency_ms"
  double p50 = 2;
  double p75 = 3;
  double p90 = 4;
  double p95 = 5;
  double p99 = 6;
}
